got it building the mod but not data